Fix: 'Current location' marker animation z-index bug

--- a/src/sass/modules/_animation.scss
+++ b/src/sass/modules/_animation.scss
@@ -1,22 +1,18 @@
 
 // Animation
 
-
 @include keyframes(pulse) {
 		from {
-			@include transform(scale(1));
-		}
-		95% {
-			@include transform(scale(1.1));
+			border: 3px solid #fff;
 		}
 		to {
-			@include transform(scale(1));
+			border: 4px solid #fff;
 		}
 }
 
 @include keyframes(pulse-fade) {
 		from {
-			@include transform(scale(0.25));
+			@include transform(scale(0.2));
 			opacity: 1.0;
 		}
 		95% {
