--- a/src/sass/modules/_map.scss
+++ b/src/sass/modules/_map.scss
@@ -92,25 +92,26 @@
 }
 
 .gm-current-location {
-		@include box-shadow(1px 0px 5px 3px rgba(50, 50, 50, 0.15));
-		@include border-radius(999px);
-		@include animation(pulse 2s linear infinite);
-  background: #3395ff;
-  width: 10px;
-  height: 10px;
-  border: 4px solid #fff;
-  position: relative;
-
-  .pulse {
+	@include animation(pulse 1.7s ease infinite alternate);
 	@include border-radius(999px);
-	@include animation(pulse-fade 1.9s ease-in-out infinite);
-  background: rgba(51, 149, 255, 0.3);
-  border-radius: 999px;
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  margin: -44px;
-  z-index: -1;
+	@include box-shadow(1px 0px 5px 3px rgba(50, 50, 50, 0.15));
+	background: #3395ff;
+	border: 3px solid #fff;
+	box-sizing: border-box;
+	height: 18px;
+	position: relative;
+	width: 18px;
+
+  .radial-pulse {
+		@include animation(pulse-fade 4.1s ease-out infinite);
+		@include border-radius(999px);
+	  background: rgba(51, 149, 255, 0.3);
+	  border-radius: 999px;
+	  height: 100px;
+	  margin: -44px;
+	  position: absolute;
+	  width: 100px;
+	  z-index: -1;
   }
 }
 
